--- a/Home/Home.html
+++ b/Home/Home.html
@@ -100,7 +100,8 @@
                                         <h5 class="card-title">Siap Hadapi Ujian</h5>
                                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                                             Praesent iaculis sed purus pretium mattis sit sed feugiat varius. Pharetra
-                                            volutpat, hendrerit adipiscing tempor eget neque quam platea. Quis augue nibh
+                                            volutpat, hendrerit adipiscing tempor eget neque quam platea. Quis augue
+                                            nibh
                                             vitae arcu.</p>
                                         <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
@@ -120,7 +121,8 @@
                                         <h5 class="card-title">Siap Hadapi Ujian</h5>
                                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                                             Praesent iaculis sed purus pretium mattis sit sed feugiat varius. Pharetra
-                                            volutpat, hendrerit adipiscing tempor eget neque quam platea. Quis augue nibh
+                                            volutpat, hendrerit adipiscing tempor eget neque quam platea. Quis augue
+                                            nibh
                                             vitae arcu.</p>
                                         <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
@@ -140,7 +142,8 @@
                                         <h5 class="card-title">Siap Hadapi Ujian</h5>
                                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                                             Praesent iaculis sed purus pretium mattis sit sed feugiat varius. Pharetra
-                                            volutpat, hendrerit adipiscing tempor eget neque quam platea. Quis augue nibh
+                                            volutpat, hendrerit adipiscing tempor eget neque quam platea. Quis augue
+                                            nibh
                                             vitae arcu.</p>
                                         <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
@@ -160,7 +163,8 @@
                                         <h5 class="card-title">Siap Hadapi Ujian</h5>
                                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                                             Praesent iaculis sed purus pretium mattis sit sed feugiat varius. Pharetra
-                                            volutpat, hendrerit adipiscing tempor eget neque quam platea. Quis augue nibh
+                                            volutpat, hendrerit adipiscing tempor eget neque quam platea. Quis augue
+                                            nibh
                                             vitae arcu.</p>
                                         <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
@@ -177,37 +181,38 @@
             <div class="container">
 
                 <div class="secfour-title" data-aos="fade-up">
-                    <h2>Task Form your fucking teachers</h2>
+                    <h2>Task Form your teachers</h2>
                     <p>Kerjain sampe tipes</p>
                 </div>
 
                 <div class="row row-cols-1 row-cols-md-3 g-4">
 
                     <div class="col-secfour" data-aos="fade-up" data-aos-delay="500">
-                      <div class="card h-100">                        
-                        <div class="card-body">
-                          <h5 class="card-title-secfour-a">Card title</h5>
-                          <p class="card-text-secfour-a">This card has supporting text below as a natural lead-in to additional content.</p>
+                        <div class="card h-100">
+                            <div class="card-body">
+                                <h5 class="card-title-secfour-a">Card title</h5>
+                                <p class="card-text-secfour-a">This card has supporting text below as a natural lead-in
+                                    to additional content.</p>
 
-                          <div class="list-secfour">
-                            <ul class="li-secfour-group">
-                            
-                                <li class="list-group-item" style="border: none;" >An item</li>
-                                <li class="list-group-item" style="border: none;">A second item</li>
-                                <li class="list-group-item" style="border: none;">A third item</li>
-                                <li class="list-group-item" style="border: none;">A fourth item</li>
-                                <li class="list-group-item" style="border: none;">And a fifth one</li>
-                              </ul>
-                          </div>
+                                <div class="list-secfour">
+                                    <ul class="li-secfour-group">
+
+                                        <li class="list-group-item" style="border: none;">An item</li>
+                                        <li class="list-group-item" style="border: none;">A second item</li>
+                                        <li class="list-group-item" style="border: none;">A third item</li>
+                                        <li class="list-group-item" style="border: none;">A fourth item</li>
+                                        <li class="list-group-item" style="border: none;">And a fifth one</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card-footer">
+                                <p class="text-foot">Mulai dari</p>
+                                <p class="text-bold">Rp. 1.000.000/bulan</p>
+
+                            </div>
                         </div>
-                        <div class="card-footer">
-                            <p class="text-foot">Mulai dari</p>
-                            <p class="text-bold">Rp. 1.000.000/bulan</p>
-                           
-                        </div>
-                      </div>
                     </div>
-            </div>
+                </div>
         </section>
 
     </main>
