--- a/Course/Course.html
+++ b/Course/Course.html
@@ -47,7 +47,7 @@
                     <li><a class="nav-link scrollto" href="/Home/Home.html">Home</a></li>
                     <li><a class="nav-link scrollto active">Course</a></li>
                     <li><a class="nav-link scrollto" href="/Statistik/statistik.html">Statistik</a></li>
-                    <li><a class="nav-link scrollto" href="/Home/Home.html">HomeWork</a></li>
+                    <li><a class="nav-link scrollto" href="/HomeWork/homework.html">HomeWork</a></li>
                     <li><a class="nav-link scrollto" href="/Profile/profile.html">Profile</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
