--- a/HomeWork/homework.html
+++ b/HomeWork/homework.html
@@ -83,9 +83,9 @@
 
         <!-- section 2 -->
             <section id="section" class="services">
-                <div class="container">
+                <div class="container mt-5">
                     <div data-aos="fade-up">
-                        <h2>Task Form your  teachers</h2>
+                        <h2>Task Form your teachers</h2>
                         <p>Kerjain sampe tipes</p>
                     </div>
 
