--- a/Course/Course.html
+++ b/Course/Course.html
@@ -80,6 +80,18 @@
                 </div>
             </div>
         </section>
+
+        <!--section 2-->
+        <section id="button" class="button-top">
+            <div class="d-grid gap-2 d-md-block">
+                <button class="btn-primary" type="button">Math</button>
+                <button class="btn-primary" type="button">Bahasa</button>
+                <button class="btn-primary" type="button">Inggris</button>
+                <button class="btn-primary" type="button">IPA</button>
+                <button class="btn-primary" type="button">IPS</button>
+                <button class="btn-primary" type="button">Biologi</button>
+              </div>
+        </section>
         
     </main>
     <!-- back to top -->
