--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -133,7 +133,7 @@
     <script src="/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="/vendor/php-email-form/validate.js"></script>
-    <script src="/Home/Home.js"></script>
+    <script src="file:///Volumes/SSD/letsstudy/Profile/profile.css"></script>
 
 </body>
 
