--- a/testsite.html
+++ b/testsite.html
@@ -41,6 +41,20 @@
   
 </style>
 
+<div id="test" class="col-md-6 col-lg-5 d-flex align-items-stretch mb-5 mb-lg-0">
+    <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+        <h4 class="title d-flex justify-content-center">
+            <p>Bahasa Inggris</p>
+        </h4>
+        <a class ="d-flex justify-content-center" href="">to link soal</a>
+        <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+        <div class ="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                <button type="button" class="btn btn-danger">give up</button>
+                <button type="button" class="btn btn-success">Selesai</button>
+        </div>
+    </div>
+</div>
+
 <div id="app">
   <button class="add-note" type="button">+</button>
 </div>
