--- a/Course/Course.html
+++ b/Course/Course.html
@@ -83,14 +83,37 @@
 
         <!--section 2-->
         <section id="button" class="button-top">
-            <div class="d-grid gap-2 d-md-block">
-                <button class="btn-primary" type="button">Math</button>
-                <button class="btn-primary" type="button">Bahasa</button>
-                <button class="btn-primary" type="button">Inggris</button>
-                <button class="btn-primary" type="button">IPA</button>
-                <button class="btn-primary" type="button">IPS</button>
-                <button class="btn-primary" type="button">Biologi</button>
+            <div class="d-grid gap-7 d-md-block">
+                <button class="btnMain" type="button">Matematika</button>
+                <button class="btnMain" type="button">Bahasa</button>
+                <button class="btnMain" type="button">Inggris</button>
+                <button class="btnMain" type="button">IPA</button>
+                <button class="btnMain" type="button">IPS</button>
+                <button class="btnMain" type="button">Biologi</button>
               </div>
+        </section>
+
+        <!--section 3-->
+        <section class="section3">
+            <div class="txt1">
+                <h2>Matematika 1</h2>
+            </div>
+
+            <div class="desc1 d-flex">
+                <img src="/pict/matematika1.jpeg" class="img-thumbnail" alt="">
+                <p1 class="my-auto p-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam esse, unde eius corrupti facere explicabo, nemo reiciendis ab impedit, ducimus sit cum rerum iste animi vero consequuntur commodi deleniti nobis ratione repudiandae dolor temporibus minus reprehenderit. Ea molestiae accusantium eligendi facilis dolorum sed quas. Ad quidem ducimus nesciunt pariatur suscipit.
+                </p1>
+            </div>
+
+            <div class="txt2">
+                <h2>Matematika 2</h2>
+            </div>
+
+            <div class="desc2 d-flex">
+                <img src="/pict/matematika1.jpeg" class="img-thumbnail" alt="">
+                <p1 class="my-auto p-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam esse, unde eius corrupti facere explicabo, nemo reiciendis ab impedit, ducimus sit cum rerum iste animi vero consequuntur commodi deleniti nobis ratione repudiandae dolor temporibus minus reprehenderit. Ea molestiae accusantium eligendi facilis dolorum sed quas. Ad quidem ducimus nesciunt pariatur suscipit.
+                </p1>
+            </div>
         </section>
         
     </main>
