--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -71,7 +71,7 @@
                             <p>Web Designer</p>
                         </div>
     
-                        <div class="col-xl col-md p-2">
+                        <div class="col-xl-6" style="height: 200px;">
                             <p class="h5 font-weight-bold">Information</p>
                             <div class="row">
                                 <div class="col">
@@ -83,7 +83,7 @@
                                     <p>0812384765</p>
                                 </div>
                             </div>
-                            <p class="h5 font-weight-bold mt-3">Projects</p>
+                            <p class="h5 font-weight-bold">Projects</p>
                             <div class="row">
                                 <div class="col">
                                     <p class="h6 font-weight-bold">Recents</p>
