--- a/Statistik/statistik.html
+++ b/Statistik/statistik.html
@@ -84,9 +84,14 @@
         <section id="section2" class="services">
             <div class="container">
                 <div class="section-title mt-5" data-aos="fade-up">
-                    <h2>Note From Kamil-Trex</h2>
-                    <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fug</p>
+                    <h2>Pencapaian nilai Ananda pekan ini</h2>
+                    <p>Berikut adalah pencapaian nilai anak pada pekan ini</p>
                 </div>
+
+                <!-- <div>
+                    <canvas id="myChart"></canvas>
+                </div> -->
+
                 <div class="row mb-5 d-flex justify-content-center  g-4">
                     <div class="col-md-6 col-lg-5 d-flex align-items-stretch mb-5 mb-lg-0">
                         <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
@@ -98,7 +103,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-5 d-flex align-items-center mb-5 mb-lg-0">
+                    <!-- <div class="col-md-6 col-lg-5 d-flex align-items-center mb-5 mb-lg-0">
                         <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
                             <h4 class="title">
                                 <p>Kamil-Trex</p>
@@ -126,7 +131,7 @@
                             <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui
                                 blanditiis</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -152,6 +157,35 @@
     <script src="../vendor/swiper/swiper-bundle.min.js"></script>
     <script src="../vendor/php-email-form/validate.js"></script>
     <script src="../Statistik/statistik.js"></script>
+    <script>const labels = [
+        'January',
+        'February',
+        'March',
+        'April',
+        'May',
+        'June',
+      ];
+    
+      const data = {
+        labels: labels,
+        datasets: [{
+          label: 'My First dataset',
+          backgroundColor: 'rgb(255, 99, 132)',
+          borderColor: 'rgb(255, 99, 132)',
+          data: [0, 10, 5, 2, 20, 30, 45],
+        }]
+      };
+    
+      const config = {
+        type: 'bar',
+        data: data,
+        options: {}
+      };
+
+      const myChart = new Chart(
+  document.getElementById('myChart'),
+  config
+);</script>
 
 </body>
 
