--- a/HomeWork/homework.html
+++ b/HomeWork/homework.html
@@ -75,14 +75,14 @@
                         </div>
                     </div>
                     <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
-                        <img src="../pict/orang_bingung.jpg" class="img-fluid" alt="">
+                        <img src="../pict/undraw_Random_thoughts_re_cob6.png" class="img-fluid" alt="">
                     </div>
                 </div>
             </div>
         </section>
 
         <!-- section 2 -->
-            <section id="section" class="services">
+            <section id="section" class="services bg-light">
                 <div class="container mt-5">
                     <div data-aos="fade-up">
                         <h2>Task Form your teachers</h2>
@@ -91,7 +91,6 @@
 
                     <div class="container">
                         <div class="row mb-5 mt-2 d-flex justify-content-center g-5">
-
 
                             <!-- <div class="title">
                                 <h1>Oh Crud!</h1>
