--- a/Statistik/statistik.html
+++ b/Statistik/statistik.html
@@ -58,7 +58,7 @@
 
     <main>
         <!--section 1-->
-        <section id="hero" class="hero d-flex align-items-center bg-light">
+        <section id="hero" class="hero d-flex align-items-center">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 d-flex flex-column justify-content-center">
@@ -75,13 +75,13 @@
                         </div>
                     </div>
                     <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
-                        <img src="../pict/orang_bingung.jpg" class="img-fluid" alt="">
+                        <img src="../pict/undraw_Growth_analytics_re_pyxf.png" class="img-fluid" alt="">
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="section2" class="services">
+        <section id="section2" class="services bg-light">
             <div class="container">
                 <div class="section-title mt-5" data-aos="fade-up">
                     <h2>Note From Kamil-Trex</h2>
