--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -59,28 +59,29 @@
             <div class="container">
                 <div>
                     <div class="row">
-                        <div class="col-xl col-md text-center">
+                        <div id="profile" class="col-sm-5 text-center">
                             <div>
-                                <img style="height: 300px; width: 300px;"
+                                <img
                                     src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius"
                                     alt="User-Profile-Image">
                             </div>
-                            <p class="h6">Hembo Tingor</p>
-                            <p>Web Designer</p>
+                            <h3>Hembo Tingor</h3>
+                            <h2>Web Designer</h2>
                         </div>
 
                         <div id="information" class="col-xl-6">
-                            <h3>Information</h3>
-                            <h4 class="email">Email</h4>
-                            <p>mtng@gmail.com</p>
-                            <h4>Nomor Telphone</h4>
+                            <h4>Information</h4>
+                            <h3 >Email</h3>
+                            <p class="email">mtng@gmail.com</p>
+                            <h3>Nomor Telphone</h3>
                             <p>0812384765</p>
-                            <h4>Projects Recents</h4>
+                            <h3>Projects Recents</h3>
                             <p>Sam Disuja</p>
                         </div>
-                    </div>
+                        <!-- button logout -->
+                            
+                        
                 </div>
-            </div>
             </div>
             <!-- Update -->
         </section>
