--- a/Home/Home.html
+++ b/Home/Home.html
@@ -112,10 +112,10 @@
                     <div class="col-md-6 col-lg-5 d-flex align-items-center mb-5 mb-lg-0">
                         <div class="card mb-3 " style="max-width: 540px;" data-aos="fade-right" data-aos-delay="200">
                             <div class="row g-0">
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Statistik</h5>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                <div class="col-md-10">
+                                    <div class="card-body-secthree rounded-0 py-2 border-0" style="display: block;">
+                                        <h5 class="card-title-secthree">Statistik</h5>
+                                        <p class="card-text-secthree">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                                             Praesent iaculis sed purus pretium mattis sit sed feugiat varius. Pharetra
                                             volutpat, hendrerit adipiscing tempor eget neque quam platea. Quis augue
                                             nibh
@@ -130,10 +130,10 @@
                     <div class="col-md-6 col-lg-5 d-flex align-items-center mb-5 mb-lg-0">
                         <div class="card mb-3 " style="max-width: 540px;" data-aos="fade-left" data-aos-delay="200">
                             <div class="row g-0">
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Home Work</h5>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                <div class="col-md-10">
+                                    <div class="card-body-secthree rounded-0 py-2 border-0" style="display: block;">
+                                        <h5 class="card-title-secthree">Home Work</h5>
+                                        <p class="card-text-secthree">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                                             Praesent iaculis sed purus pretium mattis sit sed feugiat varius. Pharetra
                                             volutpat, hendrerit adipiscing tempor eget neque quam platea. Quis augue
                                             nibh
