--- a/Statistik/statistik.html
+++ b/Statistik/statistik.html
@@ -64,12 +64,12 @@
                 <div class="row">
                     <div class="col-lg-6 d-flex flex-column justify-content-center">
                         <h1 data-aos="fade-up">Statistik</h1>
-                        <h2 data-aos="fade-up" data-aos-delay="400">Apa aja sih tugas yang udah nungguin kamu </h2>
+                        <h2 data-aos="fade-up" data-aos-delay="400">Apa Aja sih yang sudah kamu kerjakan?</h2>
                         <div data-aos="fade-up" data-aos-delay="600">
                             <div class="text-center text-lg-start">
                                 <a href="#section2"
                                     class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
-                                    <span>GAS LIAT LAH </span>
+                                    <span>DATA STATISTIK !!!</span>
                                     <i class="bi bi-arrow-right"></i>
                                 </a>
                             </div>
