--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -114,6 +114,10 @@
                                 <label for="">Nomor Telephone</label>
                                 <input type="text" class="form-control" id="nomor" placeholder="Nomor Telephone">
                             </div>
+                            <div class="form-group">
+                                <label for="">Change Photo</label>
+                                <input type="file" class="form-control" id="photo" placeholder="Photo">
+                            </div>
                         </form>
                     </div>
                 </div>
