--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -65,8 +65,7 @@
                         <div id="profile" class="col-sm-5 text-center">
                             <div>
                                 <img
-                                    src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius"
-                                    alt="User-Profile-Image">
+                                    id="img" class="img-radius">
                             </div>
                             <h3 id="namaText"></h3>
                         </div>
@@ -89,7 +88,12 @@
             </div>
             <!-- Update -->
         </section>
-
+        <style>
+            img{
+        height: 200px; width: 200px;
+        border-radius: 2px black solid;
+    }
+        </style>
         <section>
             <div class="container">
                 <div class="row">
@@ -153,7 +157,45 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-storage.js"></script>
 
     <script src="../Profile/profile.js"></script>
+    <script>
+        var input = document.createElement('input');
+input.type = 'file';
 
+input.onchange = e =>{
+    files = e.target.files;
+
+    var extension = GetFileExt(files[0]);
+    var name = GetFileName(files[0]);
+
+    namebox.value = name;
+    extlab.innerHTML = extension;
+
+    reader.readAsDataURL(files[0]);
+}
+
+reader.onload = function(){
+    myimag.src = reader.result; 
+}
+
+// selection //
+
+selbtn.onclick = function(){
+    input.click();
+}
+
+function GetFileExt(file){
+    var temp = file.name.split('.');
+    var ext = temp.slice((temp.length-1), (temp.length));
+    return '.' + ext[0];
+}
+
+function GetFileName(file){
+    var temp = file.name.split('.');
+    var fname = temp.slice(0,-1).join('.');
+    return fname;
+}
+
+    </script>
 </body>
 
 </html>
